updated with new enhencement for buynow only